# ThunderCode

./: .env.example  .gitignore  Cargo.toml  README.md  cli.py  nano_coder.py  pyproject.toml  session.py
examples/: batch_process.py
src/: display.rs  init.rs  input.rs  main.rs  repl.rs
src/api/: client.rs  errors.rs  mod.rs  models.rs  proxy.rs  request.rs  retry.rs  streaming.rs
src/auth/: api_key.rs  mod.rs
src/bridge/: api.rs  bridge_loop.rs  config.rs  messaging.rs  mod.rs  poll.rs  runner.rs  types.rs
src/commands/: mod.rs  registry.rs
src/config/: env.rs  hierarchy.rs  loader.rs  mod.rs  paths.rs  permissions_config.rs  settings.rs  theme.rs
src/constants/: api_limits.rs  betas.rs  figures.rs  mod.rs  oauth.rs  output_styles.rs  product.rs  prompts.rs  query_source.rs  spinner_verbs.rs  tool_limits.rs  tools.rs  xml.rs
src/context/: mod.rs  notifications.rs  prompt_builder.rs  system_context.rs  user_context.rs
src/coordinator/: mod.rs  prompt.rs  tools.rs
src/git/: blame.rs  diff.rs  mod.rs  operations.rs  status.rs  worktree.rs
src/keybindings/: actions.rs  bindings.rs  chord.rs  context.rs  mod.rs  resolver.rs
src/mcp/: client.rs  discovery.rs  jsonrpc.rs  mod.rs  server.rs  transport.rs  types.rs
src/memory/: frontmatter.rs  memdir.rs  mod.rs  relevance.rs  rulesmd.rs  team.rs  types.rs
src/permissions/: checker.rs  classifier.rs  denial_tracking.rs  matcher.rs  mod.rs  rules.rs  sandbox.rs
src/plugins/: builtin.rs  lifecycle.rs  loader.rs  marketplace.rs  mod.rs  registry.rs
src/query/: compaction.rs  config.rs  engine.rs  mod.rs  query.rs  stop_hooks.rs  token_budget.rs
src/remote/: manager.rs  mod.rs  types.rs  (+1 more)
tools/: __init__.py  apply_patch.py  base.py  fs.py  plan.py  shell.py
(+154 files in other folders)
