[project]
name = "nanocoder"
version = "0.1.0"
description = "AI coding agent library — accept a prompt, process it with a tool-augmented LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai[aiohttp]>=2.16.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nanocoder = "cli:main"
